<resources>
    <string name="app_name">Nancost</string>
    <string name="action_settings">Settings</string>
    <string name="str_login">Đăng nhập</string>
    <string name="str_login_notice_msg">Vui lòng nhập tên đăng nhập và mật khẩu</string>
    <string name="str_register_notice_msg">Vui lòng nhập đầy đủ các trường</string>
    <string name="str_warning_volume">Khối lượng đã giao vừa nhập lớn hơn khối lượng còn lại</string>
    <string name="str_save_login">Lưu đăng nhập</string>
    <string name="str_register">Đăng ký</string>
    <string name="str_empty_field">Hãy nhập đủ tên đăng nhập và mật khẩu</string>
    <string name="str_invalid_username">Tên đăng nhập không chính xác</string>
    <string name="str_invalid_password">Mật khẩu không chính xác</string>
    <string name="str_match_password">2 trường mật khẩu phải khớp nhau</string>
    <string name="str_add">Thêm</string>
    <string name="str_number_record">%d bản ghi</string>
    <string name="str_update">Cập nhật</string>
    <string name="str_name">Tên</string>
    <string name="str_received_volume">Khối lượng đã nhận (kg)</string>
    <string name="str_delivered_leaves">Cót đã giao (lá)</string>
    <string name="str_delivered_volume">Khối lượng đã giao (kg)</string>
    <string name="str_unit_price">Đơn giá (đ)</string>
    <string name="str_amout_pay">Số tiền phải trả (đ)</string>
    <string name="str_remaining_volume">Khối lượng còn lại (kg)</string>
    <string name="str_change_price">Thay đổi giá cót</string>
    <string name="version">Nancost version %s</string>
    <string name="str_paid">Đã trả nan còn dư</string>
    <string name="str_total">Tổng thu chi</string>
    <string name="str_date_picker">Chọn ngày</string>
    <string name="str_total_amout_paid">Tổng tiền đã trả (đ)</string>
    <string name="str_total_leaves">Tổng số cót (lá)</string>
    <string name="str_total_delivered_volume">Tổng khối lượng đã giao (kg)</string>
    <string name="str_total_received_volume">Tổng khối lượng nhận về (kg)</string>
    <string name="str_amount_paid">Số tiền đã trả (đ)</string>
    <string name="str_total_amout_will_pay">Tổng tiền phải trả (đ)</string>
    <string name="str_yes">Có</string>
    <string name="str_no">Không</string>
    <string name="str_new_price">Giá cót mới</string>
    <string name="str_nancost_paid">Trả nan thừa, nan xấu</string>
    <string name="str_empty_list">Chưa có ai cả. Hãy thêm 1 người mới!</string>
    <string name="str_empty_date">Chưa có bản ghi nào cả. Hãy thêm bản ghi mới!</string>
    <string-array name="str_array_spinner">
        <item>Tất cả</item>
        <item>Đã trả đủ tiền</item>
        <item>Chưa trả tiền</item>
        <item>Còn nợ</item>
    </string-array>
</resources>