<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.update.DateAddFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="40dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:background="@color/gray_list"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_name"
                android:enabled="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_received_volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_received_volume"
                android:layout_marginTop="@dimen/dp_16"
                app:layout_constraintTop_toBottomOf="@id/layout_name"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/received_volume_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_delivered_leaves"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_delivered_leaves"
                android:layout_marginTop="@dimen/dp_16"
                app:layout_constraintTop_toBottomOf="@id/layout_received_volume"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/delivered_leaves_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_delivered_volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_delivered_volume"
                android:layout_marginTop="@dimen/dp_16"
                app:layout_constraintTop_toBottomOf="@id/layout_delivered_leaves"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/delivered_volume_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:letterSpacing="-0.01"
                android:lineSpacingExtra="@dimen/sp_12"
                android:textColor="@color/red"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@id/layout_delivered_volume"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/sp_12" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add"
                app:layout_constraintTop_toBottomOf="@id/tv_error"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="@dimen/dp_192"
                android:layout_height="@dimen/dp_55"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:backgroundTint="@color/main_green"
                android:clickable="false"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/sp_12"
                android:text="@string/str_add"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"
                app:cornerRadius="@dimen/dp_24" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>