<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.menu.TotalFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rowLayout"
            android:paddingVertical="@dimen/dp_16"
            android:paddingStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/bg_border_nancost"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_date_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:hint="@string/str_date_picker"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_picker_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:selectAllOnFocus="true"
                    android:inputType="date"/>


            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/date_pick"
                android:src="@drawable/ic_calendar"
                android:layout_width="@dimen/dp_70"
                android:layout_height="@dimen/dp_40"
                android:layout_gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rowLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_total_money"
                android:padding="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:background="@drawable/bg_border_nancost"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_total_money"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/total_money"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    tools:text="9,999,999đ"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_25"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_total_leaves"
                android:padding="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:background="@drawable/bg_border_nancost"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_total_leaves"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/total_leaves"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    tools:text="99"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_25"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_total_delivered_volume"
                android:padding="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:background="@drawable/bg_border_nancost"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_total_delivered_volume"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/total_delivered_volume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    tools:text="99"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_25"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_total_received_volume"
                android:padding="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:background="@drawable/bg_border_nancost"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_total_received_volume"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/total_received_volume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    tools:text="99"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_25"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>